--- a/360WEB/index.html
+++ b/360WEB/index.html
@@ -31,12 +31,12 @@
   <body>
     <a-scene>
       <a-assets>
-        <img id="jembatan" crossorigin="anonymous" src="./assets/Street View 360.jpg">
+        <img id="jembatan" crossorigin="anonymous" src="assets/Street View 360.jpg">
         <img id="jembatan-thumb" crossorigin="anonymous" src="assets/J-Icon.jpg">
         <img id="bunderan-thumb" crossorigin="anonymous" src="assets/O-Icon.jpg">
         <img id="dalan-thumb" crossorigin="anonymous" src="assets/S-Icon.jpg">
-        <img id="dalan" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/city.jpg">
-        <img id="bunderan" crossorigin="anonymous" src="./assets/bunderan.jpg">
+        <img id="dalan" crossorigin="anonymous" src="assets/S-Icon.jpg">
+        <img id="bunderan" crossorigin="anonymous" src="assets/bunderan.jpg">
         
         <audio id="click-sound" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/audio/click.ogg"></audio>
       </a-assets>
